# dheunit

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  Makefile  README.md  context.h  dheunit.cpp  dheunit.h  example.cpp  suite.cpp  test.cpp
.github/workflows/: build-and-test.yml
dependencies/: CMakeLists.txt
dependencies/snowhouse/: CMakeLists.txt
dheunit/: CMakeLists.txt  assertions.h  format.h  log.h  logger.h  runner.h  test.h  verbose-test-runner.h
dheunit/dsl/: CMakeLists.txt  dheunit.cpp
dheunit/include/: dheunit.h
dheunit/internal/: buffered-log.h  log-buffer.h  stream-log.h  verbose-log.h
dheunit/runner/: CMakeLists.txt  main.cpp
dheunit/src/: context.cpp  dheunit.cpp  suite.h  test.h
dheunit/suite/: context.cpp  context.h  suite.cpp  suite.h  test.cpp  test.h
examples/: CMakeLists.txt  example.cpp
include/: dheunit.h
makefiles/: arch.mk
notes/: scope.md
src/: CMakeLists.txt  Runner.cpp  Runner.h  Suite.cpp  Test.cpp  Test.h  dheunit.cpp
src/dsl/: dheunit.h
src/runner/: CMakeLists.txt  main.cpp
src/suite/: CMakeLists.txt  context.cpp  context.h  suite.cpp  suite.h  test.cpp
test/: CMakeLists.txt  FirstTest.cpp  Latch.h  LatchTest.cpp  LogEntryTest.cpp  default-log-suite.cpp  format-suite.cpp  log-buffer-suite.cpp  log-suite.cpp  log-write-suite.cpp  main.cpp  runner.cpp  stream-log-suite.cpp  suite-test.cpp  test-test.cpp  verbose-log-suite.cpp
tests/: CMakeLists.txt  context-tests.cpp  suite-tests.cpp  test-tests.cpp
